@@ -1,14 +1,12 @@
-Embedded Images
+Embedded images
 ===============
 
-The "embed" flag tells Docutils that it should
-try to embed the image in the output document.
-
-If the image can be read from the local file system, it is base64_
-encoded and included as a `data URI`_.
+The image_loading_ setting can be used to tell the "html5" writer to
+embed images in the output document.
+The image is base64_ encoded and included as a `data URI`_.
 In future, SVG images may be directly inserted into HTML5.
 
-.. figure:: ../docs/user/rst/images/biohazard.png
+.. figure:: ../../../docs/user/rst/images/biohazard.png
    :alt: biohazard
    :align: center
 
@@ -16,8 +14,10 @@ In future, SVG images may be directly inserted into HTML5.
 
 Embedded inline image |inline-embedded| scaled to a height of 0.8 em.
 
-.. |inline-embedded| image:: ../docs/user/rst/images/biohazard.png
+.. |inline-embedded| image:: file:../../../docs/user/rst/images/biohazard.png
    :height: 0.8 em
 
+.. _image_loading:
+    https://docutils.sourceforge.io/docs/user/config.html#image-loading
 .. _base64: https://en.wikipedia.org/wiki/Base64
 .. _data URI: https://en.wikipedia.org/wiki/Data_URI_scheme
